0.7.1
Fixed find/find next menus.
Fixed changed find options being saved with prefs.
Added find after replace option to find dialog.
Find backwards in all files working properly.
Find/Replace handles multi line find replace properly.
Redone find/replace, now replaces '\n' and '\t' in the search dialog correctly.
Revert file no longer deletes undo history.
Done warn on file change pref.
Done refresh document when file changes on disk.
Add sytnatx highlighting for binary numbers in 'c/c++'.
Added functions for multiple different multiline highlighting.
More syntax highlighting fixes.
Fixed '//' inside quotes wrongly being highlighted as comment ( c,c++ etc ).
Added runCustomRule to language plugins.
Done documentaion interaction ( hold 'CTRL' while clicking ( some! )links in built documentation ).
Fixed holding 'SHIFT' when selecting tab from edit menu to move tab next to current tab.
Fixed setting KKEDIT_FILE_LIST env var for tool.
Excluded moc_* files from doxygen.
Fixed opening root editor.
Fixed opening manpageeditor.
Removed 'system' calls.
Redone plugin build system.
Redone plugin .pro files.
Added simple help to SaveHistory plug.

0.7.0
Fixed highlight all when no documents are open.
Fixed asking to save files when selecting Save All from menu.
Code clean.
Added SaveHistory plugin.
Language plugin tweaks.
Splash screen closed on showing barberpole.
Fixed hang in recent files if file unavailable.
Clicking 'Apply' in plugin pefs now updates prefs file immediately.
Added splash screen.
Added --debugcode option to configure.
Fixed spurious setting document dirty.
Recent files now use full filepath.
Fixed open from here in tab context menu.
Completion popup ( mostly! ) only pops up at end of word not begining. 
Added favourites menu plugin.
Set tab scroll buttons enabled/visible.
Exclude .o files from open from here tab menu.
Wrapped tools that edit document begin/end editblock.
Wrapped user shortcut editing keys in begin/end editblock.
Added qt5toolkit plugin.